[tool.poetry]
name = "oscmessagetool"
version = "0.1.0"
description = "A tool to simplify development and testing of OSC enabled apps"
authors = ["lorow <smykupyka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.6.0"
click = "^8.1.7"
python-osc = "^1.8.3"
pyright = "^1.1.332"
rich-click = "^1.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
